# uj-games-scriptings

./: .gitignore  README.md
1/: kolko.sh
2/: .gitignore  README.md  pyproject.toml  shell.nix
2/discord_integration/: main.py
2/rasa/: config.yml  domain.yml  story_graph.dot
2/rasa/actions/: add.py  list.py
2/rasa/data/: nlu.yml  rules.yml  stories.yml
2/rasa/storage/: tournaments_storage.py
3/src/scripts/: game.ts  smoothedHorionztalControl.ts
3/src/scripts/scenes/: mainScene.ts
4/: main.lua
5/: map.txt  mario.rb
